[tool.poetry]
name = "etl-pipeline-oop"
version = "0.1.0"
description = "ETL pipeline created with OOP concepts"
authors = ["serge-kouonche <sergeleonel@gmail.com>"]
license = "0.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
